--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
     <div class="tabs">  
         <div class="tab active" onclick="switchTab('wholesaler','signup')">Sign-Up</div>  
         <div class="tab" onclick="switchTab('wholesaler','login')">Login</div>  
-    </div>  
+    </div> 
+  <div class="popup-body">
     <form id="wholesaler-signup" class="active">  
         <input type="text" placeholder="Name">  
         <input type="number" placeholder="UPI Mobile Number">  
@@ -155,6 +156,7 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <div class="tab active" onclick="switchTab('retailer','signup')">Sign-Up</div>  
         <div class="tab" onclick="switchTab('retailer','login')">Login</div>  
     </div>  
+  <div class="popup-body">
     <form id="retailer-signup" class="active">  
         <input type="text" placeholder="Name">  
         <input type="text" placeholder="Mobile Number">  
@@ -186,6 +188,7 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>  
         <div class="tab" onclick="switchTab('delivery','login')">Login</div>  
     </div>  
+  <div class="popup-body">
     <form id="delivery-signup" class="active">  
         <input type="text" placeholder="Name">  
         <input type="text" placeholder="Mobile Number">  
