--- a/index.html
+++ b/index.html
@@ -84,18 +84,9 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   cursor:pointer;
   font-size:18px;
 }
-form{
-  display:none;
 
-  max-height:calc(90vh - 140px);  /* 🔥 MAGIC LINE */
-  overflow-y:auto;
 
-  padding-right:5px;
-}
 
-form.active{
-  display:block;
-}  
   .popup-header{
   position:sticky;
   top:0;
@@ -115,6 +106,7 @@ form.active{
   overflow-y:auto;
   padding-right:5px;
 }
+form{display:none;}
 form.active{display:block;}  
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
 input::placeholder{color:#aaa;}  
