--- a/index.html
+++ b/index.html
@@ -49,69 +49,94 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
+
   width:100%;
   max-width:380px;
-  height:90vh;                 /* 🔥 fixed height */
+  height:90vh;
 
   background:#000000cc;
   border-radius:18px;
   padding:16px;
 
   display:none;
-  overflow:hidden;             /* panel kabhi scroll nahi karega */
+  overflow:hidden;        /* panel kabhi scroll nahi karega */
   z-index:100;
 }
+
+/* ===== POPUP HEADER (CLOSE ICON AREA) ===== */
 .popup-header{
   position:sticky;
   top:0;
-  background:#000;
-  z-index:20;
+  z-index:100;            /* 🔥 sabse upar rahe */
 
+  background:#000;
   display:flex;
   justify-content:flex-end;
   align-items:center;
 
-  padding-bottom:10px;
-  margin-bottom:10px;
+  padding:8px 0 10px;
 }
 
-.popup-header span{
-  font-weight:700;
-  font-size:16px;
-}
-
-.popup-header i{
+/* Close icon */
+.close-btn{
   cursor:pointer;
-  font-size:18px;
+  font-size:20px;
+  font-weight:800;
+  color:#fff;
+  line-height:1;
 }
 
-
-
-  .popup-header{
-  position:sticky;
-  top:0;
-  z-index:30;
-  background:#000;
-  padding-bottom:8px;
-}
-
+/* ===== TABS ===== */
 .tabs{
   position:sticky;
-  top:38px;                    /* header ke niche */
-  z-index:25;
+  top:48px;               /* header ke just niche */
+  z-index:50;
+
+  display:flex;
+  margin-bottom:12px;
+  border-radius:12px;
+  overflow:hidden;
+  background:#00000055;
+  border:1px solid #333;
 }
 
-.popup-body{
-  height:calc(90vh - 110px);   /* header + tabs space */
-  overflow-y:auto;
-  padding-right:5px;
+.tab{
+  width:50%;
+  padding:12px;
+  cursor:pointer;
+  font-weight:600;
+  text-align:center;
 }
+
+.tab.active{
+  background:#00eaff33;
+}
+
+/* ===== BODY SCROLL AREA ===== */
+.popup-body{
+  height:calc(90vh - 120px);  /* header + tabs space */
+  overflow-y:auto;
+  padding-right:6px;
+}
+
+/* ===== FORMS ===== */
 form{
   display:none;
-  max-height:calc(90vh - 140px);
-  overflow-y:auto;
 }
-form.active{display:block;}  
+
+form.active{
+  display:block;
+}
+
+/* Smooth scrollbar */
+.popup-body::-webkit-scrollbar{
+  width:6px;
+}
+
+.popup-body::-webkit-scrollbar-thumb{
+  background:#00eaff55;
+  border-radius:6px;
+}
 input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
 input::placeholder{color:#aaa;}  
 input:focus{border:1px solid #00eaff;box-shadow:0 0 12px #00eaff66;}  
