--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
    <div class="overlay" onclick="closePopup()"></div>  
   
   <!-- WHOLESALER -->  
-<div id="wholesaler" class="panel" style="display:none;">  
+<div id="wholesaler" class="panel">  
   
   <span class="close-btn" onclick="closePopup()">✖</span>
   </div>
