--- a/index.html
+++ b/index.html
@@ -244,44 +244,56 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
 
 
 <!-- DELIVERY BOY -->  
-<div id="delivery" class="panel" style="display:none;"> 
-  
+<div id="delivery" class="panel" style="display:none;">
+
+  <!-- Close Button -->
   <span class="close-btn" onclick="closePopup()">✖</span>
-</div>
-    <div class="tabs">  
-        <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>  
-        <div class="tab" onclick="switchTab('delivery','login')">Login</div>  
-    </div>  
+
+  <!-- Tabs -->
+  <div class="tabs">
+    <div class="tab active" onclick="switchTab('delivery','signup')">Sign-Up</div>
+    <div class="tab" onclick="switchTab('delivery','login')">Login</div>
+  </div>
+
+  <!-- Popup Body -->
   <div class="popup-body">
-    <form id="delivery-signup" class="active">  
-        <input type="text" placeholder="Name">  
-        <input type="text" placeholder="Mobile Number">  
-        <input type="text" placeholder="Alternate Mobile (optional)">  
-        <input type="text" placeholder="Current Live Location">  
-        <input type="password" placeholder="Password">  
-        <input type="password" placeholder="Confirm Password">  
-        <select>  
-            <option>2-Wheeler</option>  
-            <option>3-Wheeler</option>  
-            <option>4-Wheeler</option>  
-        </select>  
-        <input type="text" placeholder="Vehicle Model">  
-        <input type="text" placeholder="Vehicle Number">  
-        <button type="button" class="submit">Create Account</button> 
+
+    <!-- Sign-Up Form -->
+    <form id="delivery-signup" class="active">
+      <input type="text" placeholder="Name">
+      <input type="text" placeholder="Mobile Number">
+      <input type="text" placeholder="Alternate Mobile (optional)">
+      <input type="text" placeholder="Current Live Location">
+      <input type="password" placeholder="Password">
+      <input type="password" placeholder="Confirm Password">
+      <select>
+        <option>2-Wheeler</option>
+        <option>3-Wheeler</option>
+        <option>4-Wheeler</option>
+      </select>
+      <input type="text" placeholder="Vehicle Model">
+      <input type="text" placeholder="Vehicle Number">
+      <button type="button" class="submit">Create Account</button>
+
       <p style="margin-top:15px;font-size:14px;opacity:0.8">
-  Already have an account?
-  <span style="color:#00eaff;cursor:pointer;font-weight:600"
-        onclick="switchTab('delivery','login')">
-    Login here
-  </span>
-</p>
-    </form>  
-    <form id="delivery-login">  
-        <input type="text" placeholder="Mobile Number">  
-        <input type="password" placeholder="Password">  
-        <button type="button" class="submit">Login</button>  
-    </form>  
-</div>  
+        Already have an account?
+        <span style="color:#00eaff;cursor:pointer;font-weight:600"
+              onclick="switchTab('delivery','login')">
+          Login here
+        </span>
+      </p>
+    </form>
+
+    <!-- Login Form -->
+    <form id="delivery-login">
+      <input type="text" placeholder="Mobile Number">
+      <input type="password" placeholder="Password">
+      <button type="button" class="submit">Login</button>
+    </form>
+
+  </div> <!-- End of popup-body -->
+
+
 
 
 
