--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <input type="password" placeholder="Password">  
         <input type="password" placeholder="Confirm Password">  
         <button type="button" class="submit">Create Account</button>  
+      <p style="margin-top:15px;font-size:14px;opacity:0.8">
+  Already have an account?
+  <span style="color:#00eaff;cursor:pointer;font-weight:600"
+        onclick="switchTab('wholesaler','login')">
+    Login here
+  </span>
+      </p>
     </form>  
     <form id="wholesaler-login">  
         <input type="number" placeholder="Mobile Number">  
@@ -124,7 +131,14 @@ form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}
         <input type="text" placeholder="Shop Current Location">  
         <input type="password" placeholder="Password">  
         <input type="password" placeholder="Confirm Password">  
-        <button type="button" class="submit">Create Account</button>  
+        <button type="button" class="submit">Create Account</button> 
+      <p style="margin-top:15px;font-size:14px;opacity:0.8">
+  Already have an account?
+  <span style="color:#00eaff;cursor:pointer;font-weight:600"
+        onclick="switchTab('retailer','login')">
+    Login here
+  </span>
+</p>
     </form>  
     <form id="retailer-login">  
         <input type="text" placeholder="Mobile Number">  
