--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaf
 }
 
 .popup-header{
+  position:sticky;
+  top:0;
+  background:#000;
+  z-index:10;
+
   display:flex;
-  justify-content:space-between;
-  align-items:center;
-  margin-bottom:15px;
+  justify-content:flex-end;
+  padding-bottom:8px;
 }
 
 .popup-header span{
