--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body::after{content:'';position:fixed;bottom:-100px;right:-100px;width:350px;hei
 @keyframes move1{0%{transform:translate(0,0);}50%{transform:translate(80px,120px);}100%{transform:translate(0,0);}}  
 @keyframes move2{0%{transform:translate(0,0);}50%{transform:translate(-100px,-160px);}100%{transform:translate(0,0);}}  
 .container{width:90%;max-width:500px;background: rgba(245, 247, 250, 0.96);border:1px solid #ffffff22;padding:35px;border-radius:20px;box-shadow:0 0 35px #00eaff33;backdrop-filter:blur(18px);text-align:center;z-index:10;}  
-h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #00eaff;}  
+h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #2563eb;}  
 .nav-buttons{display:flex;flex-wrap:wrap;justify-content:center;margin-bottom:25px;gap:12px;}  
 .nav-buttons button{padding:14px 20px;border:none;border-radius:14px;cursor:pointer;font-weight:700;color:#fff;background:#00eaff33;border:1px solid #ffffff22;transition:0.4s;display:flex;align-items:center;gap:8px;font-size:16px;box-shadow:0 0 8px #00000088;}  
 .nav-buttons button:hover{background:#000000aa;transform:scale(1.06);box-shadow:0 0 20px #00eaff55;}  
