--- a/index.html
+++ b/index.html
@@ -1,49 +1,98 @@
-<!DOCTYPE html>  <html lang="hi">  
-<head>  
-<meta charset="UTF-8">  
-<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<title>Bazaar Sathi </title>  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">  
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">  <style>  
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Poppins",sans-serif;}  
-body{min-height:100vh;background: radial-gradient(circle at top,#000,#0a0a0a,#111);display:flex;justify-content:center;align-items:flex-start;padding:50px 0;overflow-x:hidden;color:#fff;}  
-body::before{content:'';position:fixed;top:-100px;left:-100px;width:300px;height:300px;background:#00eaff22;border-radius:50%;filter:blur(120px);animation:move1 12s infinite linear;}  
-body::after{content:'';position:fixed;bottom:-100px;right:-100px;width:350px;height:350px;background:#ff00ff22;border-radius:50%;filter:blur(150px);animation:move2 15s infinite linear;}  
-@keyframes move1{0%{transform:translate(0,0);}50%{transform:translate(80px,120px);}100%{transform:translate(0,0);}}  
-@keyframes move2{0%{transform:translate(0,0);}50%{transform:translate(-100px,-160px);}100%{transform:translate(0,0);}}  
-.container{width:90%;max-width:500px;background: rgba(245, 247, 250, 0.96);border:1px solid #ffffff22;padding:35px;border-radius:20px;box-shadow:0 0 35px #00eaff33;backdrop-filter:blur(18px);text-align:center;z-index:10;}  
-h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #2563eb;}  
-.nav-buttons{display:flex;flex-wrap:wrap;justify-content:center;margin-bottom:25px;gap:12px;}  
-.nav-buttons button{padding:14px 20px;border:none;border-radius:14px;cursor:pointer;font-weight:700;color:#fff;background:#00eaff33;border:1px solid #ffffff22;transition:0.4s;display:flex;align-items:center;gap:8px;font-size:16px;box-shadow:0 0 8px #00000088;}  
-.nav-buttons button:hover{background:#000000aa;transform:scale(1.06);box-shadow:0 0 20px #00eaff55;}  
-.nav-buttons i{font-size:20px;}  
-.tabs{display:flex;margin-bottom:18px;border-radius:12px;overflow:hidden;background: rgba(0, 0, 0, 0.55);border:1px solid #333;}  
-.tab{width:50%;padding:12px;cursor:pointer;color:#fff;font-weight:600;transition:0.3s;}  
-.tab.active{background:#00eaff33;} 
+<!DOCTYPE html>
+<html lang="hi">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Bazaar Sathi</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+<style>
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+  font-family:"Poppins",sans-serif;
+}
+
+/* ===== BODY ===== */
+body{
+  min-height:100vh;
+  background:radial-gradient(circle at top,#020617,#020617,#0f172a);
+  display:flex;
+  justify-content:center;
+  align-items:flex-start;
+  padding:50px 0;
+  color:#e5e7eb;
+}
+
+/* ===== MAIN CONTAINER ===== */
+.container{
+  width:90%;
+  max-width:500px;
+  background:#f8fafc;
+  border:1px solid #e5e7eb;
+  padding:35px;
+  border-radius:20px;
+  box-shadow:0 20px 50px rgba(2,6,23,0.35);
+  text-align:center;
+}
+
+/* ===== LOGO ===== */
 .logo-text-only{
   display:inline-block;
-
-  font-size:20px;          /* chhota, logo-friendly text */
-  font-weight:700;
-  letter-spacing:0.5px;
-
-  padding:6px 25px;        /* thin background patti */
+  font-size:22px;
+  font-weight:800;
+  padding:6px 26px;
   border-radius:10px;
-
-  background:#facc15;      /* soft yellow */
-  color:#1f2937;           /* dark readable text */
-
-  box-shadow:
-    0 4px 12px rgba(0,0,0,0.25);
+  background:#facc15;
+  color:#020617;
+  box-shadow:0 4px 12px rgba(0,0,0,0.25);
+  margin-bottom:25px;
 }
-  .overlay{
+
+/* ===== NAV BUTTONS ===== */
+.nav-buttons{
+  display:flex;
+  flex-wrap:wrap;
+  justify-content:center;
+  gap:12px;
+  margin-bottom:25px;
+}
+
+.nav-buttons button{
+  padding:14px 20px;
+  border-radius:14px;
+  cursor:pointer;
+  font-weight:700;
+  color:#e5e7eb;
+  background:#0f172a;          /* 🔥 MARKET LEVEL */
+  border:1px solid #1e293b;
+  transition:0.3s;
+  display:flex;
+  align-items:center;
+  gap:8px;
+  font-size:16px;
+}
+
+.nav-buttons button:hover{
+  background:#020617;
+  box-shadow:0 0 18px rgba(56,189,248,0.45);
+  transform:scale(1.05);
+}
+
+/* ===== OVERLAY ===== */
+.overlay{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,0.65);
+  background:rgba(2,6,23,0.7);
   backdrop-filter:blur(4px);
   z-index:9;
   display:none;
 }
 
+/* ===== PANEL ===== */
 .panel{
   position:fixed;
   top:50%;
@@ -51,46 +100,106 @@ h1{font-size:34px;font-weight:800;margin-bottom:25px;text-shadow:0 0 18px #2563e
   transform:translate(-50%,-50%);
   width:100%;
   max-width:380px;
-
-  max-height:90vh;          /* 🔥 screen ke andar */
-  background:#000000cc;
+  max-height:90vh;
+  background:#020617;
+  border:1px solid #1e293b;
   border-radius:18px;
   padding:20px;
-
   display:none;
-  overflow:hidden;          /* header fixed rahe */
   z-index:60;
 }
 
-.popup-header{
-  position:sticky;
-  top:0;
-  background:#000;
-  z-index:10;
-
-  display:flex;
-  justify-content:flex-end;
-  padding-bottom:8px;
-}
-
-.popup-header span{
-  font-weight:700;
-  font-size:16px;
-}
-
-.popup-header i{
+/* ===== CLOSE ===== */
+.close-btn{
   cursor:pointer;
+  font-weight:700;
   font-size:18px;
+  color:#94a3b8;
 }
-form{display:none;max-height:300px;overflow-y:auto;padding-right:5px;}  
-form.active{display:block;}  
-input, select{width:100%;padding:12px;margin:10px 0;border-radius:12px;border:1px solid #444;outline:none;font-size:15px;background:#00000088;color:#fff;transition:0.3s;}  
-input::placeholder{color:#aaa;}  
-input:focus{border:1px solid #00eaff;box-shadow:0 0 12px #00eaff66;}  
-button.submit{width:100%;padding:14px;border:none;border-radius:14px;margin-top:18px;background:#00eaffaa;color:#000;font-size:19px;font-weight:700;cursor:pointer;transition:0.3s;box-shadow:0 0 18px #00eaff88;}  
-button.submit:hover{transform:scale(1.03);background:#00eaff;box-shadow:0 0 25px #00eaff;}  
-form::-webkit-scrollbar{width:6px;}  
-form::-webkit-scrollbar-thumb{background:#00eaff55;border-radius:6px;}  
+
+/* ===== TABS ===== */
+.tabs{
+  display:flex;
+  margin:15px 0;
+  border-radius:12px;
+  overflow:hidden;
+  background:#020617;
+  border:1px solid #1e293b;
+}
+
+.tab{
+  width:50%;
+  padding:12px;
+  cursor:pointer;
+  color:#cbd5e1;
+  font-weight:600;
+}
+
+.tab.active{
+  background:#1e293b;
+  color:#38bdf8;
+}
+
+/* ===== FORMS ===== */
+form{
+  display:none;
+  max-height:300px;
+  overflow-y:auto;
+}
+
+form.active{
+  display:block;
+}
+
+/* ===== INPUTS ===== */
+input, select{
+  width:100%;
+  padding:12px;
+  margin:10px 0;
+  border-radius:12px;
+  border:1px solid #334155;
+  background:#020617;
+  color:#e5e7eb;
+  font-size:15px;
+}
+
+input::placeholder{
+  color:#94a3b8;
+}
+
+input:focus{
+  border-color:#38bdf8;
+  box-shadow:0 0 10px rgba(56,189,248,0.5);
+}
+
+/* ===== SUBMIT BUTTON ===== */
+button.submit{
+  width:100%;
+  padding:14px;
+  margin-top:18px;
+  border-radius:14px;
+  border:none;
+  background:#38bdf8;
+  color:#020617;
+  font-size:18px;
+  font-weight:800;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+button.submit:hover{
+  background:#0ea5e9;
+  box-shadow:0 10px 25px rgba(56,189,248,0.6);
+}
+
+/* SCROLL */
+form::-webkit-scrollbar{
+  width:6px;
+}
+form::-webkit-scrollbar-thumb{
+  background:#38bdf8;
+  border-radius:6px;
+}
 </style>  </head>  
 <body>  <div class="container">  
     <h1 class="logo-text-only">🌐 BazaarSathi</h1>  
