--- a/retailer.html
+++ b/retailer.html
@@ -502,7 +502,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
   <hr>
   <b id="cartTotalText"></b>
 </div>
-    <button class="primary" style="margin-top:12px" onclick="payCart()">💳 Pay & Order</button>
+    <button class="primary" style="margin-top:12px" onclick="payCart(event)">💳 Pay & Order</button>
     <button onclick="closeAll()">Close</button>
   </div>
 </div>
